--- a/src/Dashboard/MetricsCategories/MetricsCategories.module.css
+++ b/src/Dashboard/MetricsCategories/MetricsCategories.module.css
@@ -196,7 +196,7 @@
 }
 
 .widgetBody {
-  padding: 20px;
+  padding: 16px 0;
   font-size: 16px;
   color: #1d1d1f;
 }
@@ -213,23 +213,45 @@
 
 /* New styles for metrics display */
 .metricsList {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
 .metricItem {
-  padding: 10px 0;
-  border-bottom: 1px solid #e0e0e0;
+  padding: 16px;
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.08); */
+  background: rgba(44, 44, 46, 0.95); /* Dark mode */
+  cursor: pointer;
+  height: 150px;
+  border-radius: 12px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+}
+
+.metricItem.darkTheme {
+  background: rgba(44, 44, 46, 0.95); /* Dark mode */
 }
 
 .metricItem:last-child {
   border-bottom: none;
 }
 
+.metricButton{
+  text-align: left;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  padding-bottom: 24px;
+  font-size: 16px;
+}
+
 .metricName {
   font-weight: 600;
-  color: #1d1d1f;
+  color: #000000;
 }
 
 .metricName.darkTheme {
