--- a/src/Dashboard/MetricsCategories/MetricsCategories.module.css
+++ b/src/Dashboard/MetricsCategories/MetricsCategories.module.css
@@ -232,7 +232,7 @@
 }
 
 .metricItem.darkTheme {
-  background: rgba(44, 44, 46, 0.95); /* Dark mode */
+  background: rgba(44, 44, 46); /* Dark mode */
 }
 
 .metricItem:last-child {
@@ -284,12 +284,15 @@
 
 .metricDetails {
   margin-top: 10px;
-  padding: 10px;
-  background-color: #f5f5f5;
+  padding: 16px;
+  background-color: #ffffff;
   border-radius: 8px;
 }
 
 .metricDetails.darkTheme {
-  background-color: #2c2c2e;
+  background: rgba(44, 44, 46); /* Dark mode */
   color: #ffffff;
+}
+.metricDetails p{
+  margin:0;
 }
