--- a/src/Dashboard/Dashboard Plane/DashboardPlane.module.css
+++ b/src/Dashboard/Dashboard Plane/DashboardPlane.module.css
@@ -184,6 +184,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
+  cursor: pointer;
 }
 
 .widgetTitleContainer span {
@@ -219,6 +220,7 @@
   padding: 0;
   text-align: left;
   width: 100%;
+  cursor: pointer;
 }
 
 .widgetTitle:disabled {
@@ -241,6 +243,8 @@
 
 .verySmallWindow .widgetData {
   line-height: 1.2;
+  padding: 0 16px;
+  padding-top: 8px;
 }
 
 .smallWindow .widgetData {
@@ -346,17 +350,8 @@
   z-index: 1;
   border-top-left-radius: 24px;
   border-top-right-radius: 24px;
+  cursor: pointer;
 }
-
-.metricCategoriesClickArea {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 0, 0, 0);
-  position: absolute;
-  z-index: 1;
-  border-radius: 24px;
-}
-
 .widgetClickArea {
   width: 100%;
   height: calc(100% - 43px);
