--- a/src/Metrics/Metrics.module.css
+++ b/src/Metrics/Metrics.module.css
@@ -20,7 +20,7 @@
   width: 30%;
   background: rgb(255, 255, 255);
   backdrop-filter: blur(20px);
-  border-radius: 12px;
+  border-radius: 24px;
   height: 100%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
@@ -32,7 +32,7 @@
 }
 
 .tableContainer.darkTheme {
-  background: rgb(44, 44, 46);
+  background: rgb(28, 28, 30);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -49,7 +49,7 @@
   height: 100%;
   background: rgb(255, 255, 255);
   backdrop-filter: blur(20px);
-  border-radius: 12px;
+  border-radius: 24px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   overflow-y: auto;
   box-sizing: border-box;
@@ -836,6 +836,9 @@
   background: transparent;
   overflow-y: auto;
   transition: background 0.3s ease;
+  height: 100%;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
 }
 
 .categoryList.darkTheme {
@@ -843,10 +846,9 @@
 }
 
 .categoryItem {
-  padding: 13px 16px;
-  background: rgba(255, 255, 255, 0.95);
+  padding: 13.5px 16px;
+  background: rgba(243, 242, 248);
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   text-align: left;
   font-size: 14px;
   font-weight: 600;
@@ -856,9 +858,22 @@
   transition: background 0.2s ease, border-bottom 0.3s ease;
 }
 
+.categoryItem span{
+  flex: 0 0 auto;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 0.02em;
+  color: #1d1d1f; /* Light mode default */
+  transition: color 0.3s ease; /* Smooth theme transition */
+}
+
+.categoryItem.darkTheme span{
+  color: #ffffff;
+  background-color: rgb(44, 44, 46);
+}
+
 .categoryItem.darkTheme {
   background: rgba(44, 44, 46, 0.95);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   color: #ffffff;
 }
 
