--- a/src/App Header/AppHeader.module.css
+++ b/src/App Header/AppHeader.module.css
@@ -146,9 +146,19 @@
   background: rgba(88, 86, 214, 0.12);
 }
 
+.activeDashboard.darkTheme {
+  color: #5856d6;
+  background: rgba(88, 86, 214, 0.2);
+}
+
 .activeSheets {
   color: #007aff;
   background: rgba(0, 122, 255, 0.12);
+}
+
+.activeSheets.darkTheme {
+  color: #007aff;
+  background: rgba(0, 122, 255, 0.2);
 }
 
 .activeFinancials {
