--- a/src/Metrics/Metrics.module.css
+++ b/src/Metrics/Metrics.module.css
@@ -59,7 +59,7 @@
 }
 
 .cardDetailsContainer.darkTheme {
-  background: rgb(44, 44, 46);
+  background: rgb(28, 28, 30);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -843,6 +843,24 @@
 
 .categoryList.darkTheme {
   background: transparent;
+}
+
+.titleMetrics{
+  font-size: 24px;
+  font-weight: 700;
+  color: #1d1d1f;
+  margin: 0px;
+  padding-top: 8px;
+  padding-bottom: 24px;
+  transition: color 0.3s ease;
+}
+
+.titleMetrics.darkTheme{
+  color: #ffffff;
+}
+
+.titleMetrics.darkTheme {
+  color: #ffffff;
 }
 
 .categoryItem {
